--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,7 @@ navbar-links:
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/assets/img/favicon.jpg"
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
